@@ -3,6 +3,9 @@ Changelog
 
 8.8-dev - (unreleased)
 ----------------------
+* Bugfix: relation validation error on Assessment no longer triggers an
+  unauthorized error and widget can be used to correct the validation error
+  [ichimdav refs #19222]
 * Bugfix: Display charts properly when too many charts from the same
   visualization is added in a figure and the tabs are replaced with
   a dropdown
